syntax = "proto3";
package pattern;

option csharp_namespace = "Service";

message GetPattern {
    string id = 1;
}
