syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";

message PatternDeleted {
    string source_id = 1;
}
