syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";
import public "BackstitchCoordinates.proto";

message BackstitchesUnmarked {
    string source_id = 1;
    repeated BackstitchCoordinates backstitches = 2;
}
